test/error/E10.chigfn
{
	"type": "function",
	"name": "helloworld",
	"inputs": [],
	"outputs": [],
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": "hi"
		}
	}
}
